# scholar

./: LICENSE  README.md
backend/: .gitignore  API.md  ARCHITECTURE_SUMMARY.md  RAG_PIPELINE_README.md  pyproject.toml  pytest.ini  tasks.md
backend/app/: __init__.py  main.py
backend/app/api/routes/: files.py  flashcards.py  qa.py  quiz.py
backend/app/models/: file.py  flashcard.py  qa.py  quiz.py  study.py
backend/app/services/: chunking.py  document.py  embedding.py  extractor.py  flashcard_service.py  llm_service.py  qa_service.py  quiz_service.py  rag_pipeline.py  vector_store.py
backend/app/tests/: test_chunking.py  test_extraction.py  test_flashcards.py  test_qa.py  test_quiz.py  test_rag_llm.py  test_simple_rag.py
backend/app/utils/: constants.py
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: .gitignore  INTEGRATION_README.md  fix-paths.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tasks.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/flashcards/: page.tsx
frontend/app/qa/: page.tsx
frontend/app/quiz/: page.tsx
frontend/components/: ApiTest.tsx
frontend/components/chat/: ChatInput.tsx  Message.tsx  SessionHistory.tsx
frontend/components/document/: DocumentViewer.tsx  HighlightableText.tsx  PDFViewer.tsx  SourceReference.tsx
frontend/components/ui/: error-boundary.tsx  loading.tsx  processing-status.tsx  scroll-area.tsx  textarea.tsx  toast.tsx  tooltip.tsx
frontend/lib/: api.test.ts  api.ts  qa-gate.ts
frontend/lib/constants/: colors.ts
(+9 files in other folders)
